@@ -8,6 +8,7 @@
     <title>iTeleskop</title>
 
     <script type="text/javascript" src="astro.js"></script>
+    <script type="text/javascript" src="md5.js"></script>
     <script type="text/javascript">
         var Ext = Ext || {}; // Ext namespace won't be defined yet...
 
